# openenv-customer-support

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app_gradio.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  start.sh
.huggingface/: build_config.yaml
data/: sample_tickets.json
openenv_customer_support.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: baseline_inference.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  customer_support_env.py  graders.py  ticket_generator.py
tests/: test_environment.py
